# gremsy_ros2

./: CMakeLists.txt  README.md  package.xml
config/: config_uav.yaml
docs/images/: README.md
examples/: CMakeLists.txt  gimbal_move_angle.cpp  payload_do_object_detection.cpp  payload_do_object_tracking.cpp  payload_get_file_record.cpp  payload_get_video_record_status.cpp  payload_set_camera_zoom_targetpos.cpp  payload_set_standby_mode.cpp  payload_set_stream_bitrate.cpp  payload_set_stream_profile.cpp  payload_set_stream_resolution.cpp
libs/: payloadSdkInterface.cpp  payloadSdkInterface.h  payloadsdk.h
libs/payload-define/: mb1_sdk.h  orusl_sdk.h
src/: gremsy_camera_stream_node.cpp  spirit_heading_follower.cpp
tests/demo_project/include/: main.h
tests/parse_klv_stream/: CMakeLists.txt  README.md  test_decode_udpsrc.cpp
tests/parse_klv_stream/helpers/: app_logging.h  common_include.hpp  klv_decode_interface.cpp  klv_decode_interface.hpp
tests/parse_klv_stream/libs/include/: common_include.hpp  keys.hpp  packet.hpp  unpack.hpp  utils.hpp
tests/ui_demo/: CMakeLists.txt  README.md  main.cpp
tests/ui_demo/ui_gtk/: MainWindow.cpp  MainWindow.h
tests/ui_demo/ui_gtk/PayloadControlTab/: PayloadSettingsTab.cpp  PayloadSettingsTab.h
